yoshimi 1.5.9 M

2018-11-21 Will
* CLI Reverb and Echo controls completed.
  and created new help lists for these.
* Added help list of all effects (by name).

2018-11-20 Will
* Small adjustments to NRPN effects in synthEngine.
* Started defining CLI effect controls.

2018-11-18 Will
* Created placeholders for unified presets system.

2018-11-17 Will
* Changed CLI formant filter formant number for clarity.
* Improved CLI filter help list.
* Added CLI display of filter's current vowel/formant.

2018-11-11 Will
* Improved CLI kit mode controls.
* Added CLI min to last note and max to last note.

2018-11-10 Will
* CLI fine tuning.
* Added dummy Part entries in limits for text entries
  that have no 'value' to prevent errors when tested.
* Changed CLI Velocity 'Offset' to 'Level'.
  This prevents a clash with ON/OFF commands.
* More CLI adjustments and conversion to sendNormal().
  This provides better error checking and reporting.
* Corrected CLI Voice Modulator type message.
* BugFix: CLI Voice number blocked if current disabled.
* CLI kitmode is now a pseudo context level.
  It emulates normal 'back' actions.

2018-11-9 Will
* All CLI part contexts checked for enable.
* Substantially revised CLI part level controls.
  No need for KMode, KItem as names unique and
  numbers assumed to be kit items in this mode.
  Effect and Name no longer need 'K' prefix.

2018-11-8 Will
* Further revision to CLI AddVoice controls.
* BugFix: CLI waveform change only setting voice 1.
* Improved CLI waveform selection.
* CLI checks part enabled before other controls.

2018-11-7 Will
* Added missing controls to CLI voice modulator.
* Simplified CLI voice modulator type setting.
* Revised CLI common controls.
  Detune types now names, not numbers.
* BugFix: limits test not seeing AddSynth Modulator.

2018-11-4 Will
* Completed all CLI waveform controls.
 I think!
* Adjustments to CLI minimum abbreviations.

2018-11-3 Will
* Added CLI waveform access for modulators.

2018-11-2 Will